Upgrade to SBT 0.13.13